--- a/src/doc-layout.hbs
+++ b/src/doc-layout.hbs
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="main" data-layout="{{layoutTemplate}}">
+<div class="main" data-render-layout="{{layoutTemplate}}">
 {{{renderLayout}}}
 </div>
 <script src="/js/jquery-1.11.2.min.js"></script>
