--- a/src/main-layout.hbs
+++ b/src/main-layout.hbs
@@ -4,7 +4,7 @@
 {{#eachPage}}<li>{{{pageLink}}}</li>{{/eachPage}}
 </ul>
 </div>
-<div class="markdown-body content" data-page="{{page}}">
+<div class="markdown-body content" data-render-page="{{page}}">
 {{{renderPage}}}
 </div>
 </div>
