remove wrapper div - pub-server v1.2

--- a/templates/main-layout.hbs
+++ b/templates/main-layout.hbs
@@ -4,7 +4,7 @@
 {{#eachPage}}<li>{{{pageLink}}}</li>{{/eachPage}}
 </ul>
 </div>
-<div class="markdown-body content" data-render-page="{{page}}">
+<div class="markdown-body content">
 {{{renderPage}}}
 </div>
 </div>
